crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_batch.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&batch"
---
{
  "hash": "lba10ay44xhd5rl800xxl8l4tpnryvc7t4s996nzpc53cxj6uydh825sucu5y8",
  "number": 3,
  "receipt": 3.0,
  "slot_number": 1,
  "tx_range": {
    "end": 266,
    "start": 6
  },
  "type": "batch"
}
