crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_event.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "*response"
---
{
  "key": "bar0",
  "module": {
    "name": "Bank"
  },
  "number": 1,
  "tx_hash": "ltx1qyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqssayepf",
  "type": "event",
  "value": {
    "token_frozen": {
      "freezer": {
        "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
      },
      "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
    }
  }
}
