crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_finalized_slot.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&slot"
---
{
  "batch_range": {
    "end": 2,
    "start": 0
  },
  "finality_status": "finalized",
  "hash": "lblk1996593lp05aq0kxrsx4h0vvarckl9x4cxrl9edsdwh3k9lv0ty8sgfwcrh",
  "number": 0,
  "state_root": "lsr1wd6xzar994ex7mm595cqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqz3ltjy",
  "timestamp": 100000.0,
  "type": "slot"
}
