crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_finalized_slot_include_children.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&slot"
---
{
  "batch_range": {
    "end": 2,
    "start": 0
  },
  "batches": [
    {
      "hash": "lba14ltejn6wvgjapw5sv0deqq9x5x2wpuxmh7usa5xy0l37ydt3wu8qmqn4wv",
      "number": 0,
      "receipt": 0.0,
      "slot_number": 0,
      "tx_range": {
        "end": 2,
        "start": 0
      },
      "txs": [
        {
          "batch_number": 0,
          "body": {
            "data": "dHgwIGJvZHk="
          },
          "event_range": {
            "end": 2,
            "start": 0
          },
          "events": [
            {
              "key": "foo0",
              "module": {
                "name": "Bank"
              },
              "number": 0,
              "tx_hash": "ltx1jhxkq0l9wlaf2j8vpjd4pvr82eh7qly276kt530kr9hn59w4z8mq44ua8h",
              "type": "event",
              "value": {
                "token_created": {
                  "admins": [],
                  "coins": {
                    "amount": "0",
                    "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                  },
                  "mint_to_address": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "minter": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "supply_cap": "340282366920938463463374607431768211455",
                  "token_name": "token0"
                }
              }
            },
            {
              "key": "bar0",
              "module": {
                "name": "Bank"
              },
              "number": 1,
              "tx_hash": "ltx1jhxkq0l9wlaf2j8vpjd4pvr82eh7qly276kt530kr9hn59w4z8mq44ua8h",
              "type": "event",
              "value": {
                "token_frozen": {
                  "freezer": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                }
              }
            }
          ],
          "hash": "ltx1jhxkq0l9wlaf2j8vpjd4pvr82eh7qly276kt530kr9hn59w4z8mq44ua8h",
          "number": 0,
          "receipt": {
            "data": 0,
            "result": "successful"
          },
          "type": "tx"
        },
        {
          "batch_number": 0,
          "body": {
            "data": "dHgxIGJvZHk="
          },
          "event_range": {
            "end": 4,
            "start": 2
          },
          "events": [
            {
              "key": "foo1",
              "module": {
                "name": "Bank"
              },
              "number": 2,
              "tx_hash": "ltx1wzd4t0fa5r66swqjt0gwugx9hlwhe2apwwgj6s5pet5pddu6yqdsfyr8jn",
              "type": "event",
              "value": {
                "token_created": {
                  "admins": [],
                  "coins": {
                    "amount": "0",
                    "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                  },
                  "mint_to_address": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "minter": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "supply_cap": "340282366920938463463374607431768211455",
                  "token_name": "token1"
                }
              }
            },
            {
              "key": "bar1",
              "module": {
                "name": "Bank"
              },
              "number": 3,
              "tx_hash": "ltx1wzd4t0fa5r66swqjt0gwugx9hlwhe2apwwgj6s5pet5pddu6yqdsfyr8jn",
              "type": "event",
              "value": {
                "token_frozen": {
                  "freezer": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                }
              }
            }
          ],
          "hash": "ltx1wzd4t0fa5r66swqjt0gwugx9hlwhe2apwwgj6s5pet5pddu6yqdsfyr8jn",
          "number": 1,
          "receipt": {
            "data": 1,
            "result": "successful"
          },
          "type": "tx"
        }
      ],
      "type": "batch"
    },
    {
      "hash": "lba12gqf7x9glzx9u9x4kua8xn0zcpjzd6qleu3e0fcw57cxp2qfhu7qv72y2m",
      "number": 1,
      "receipt": 1.0,
      "slot_number": 0,
      "tx_range": {
        "end": 4,
        "start": 2
      },
      "txs": [
        {
          "batch_number": 1,
          "body": {
            "data": "dHgyIGJvZHk="
          },
          "event_range": {
            "end": 6,
            "start": 4
          },
          "events": [
            {
              "key": "foo2",
              "module": {
                "name": "Bank"
              },
              "number": 4,
              "tx_hash": "ltx1yl9xfsyj49vu0mw9yhk5t6z9k80x5avs69el6tadjyeu3fme583ss952s0",
              "type": "event",
              "value": {
                "token_created": {
                  "admins": [],
                  "coins": {
                    "amount": "0",
                    "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                  },
                  "mint_to_address": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "minter": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "supply_cap": "340282366920938463463374607431768211455",
                  "token_name": "token2"
                }
              }
            },
            {
              "key": "bar2",
              "module": {
                "name": "Bank"
              },
              "number": 5,
              "tx_hash": "ltx1yl9xfsyj49vu0mw9yhk5t6z9k80x5avs69el6tadjyeu3fme583ss952s0",
              "type": "event",
              "value": {
                "token_frozen": {
                  "freezer": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                }
              }
            }
          ],
          "hash": "ltx1yl9xfsyj49vu0mw9yhk5t6z9k80x5avs69el6tadjyeu3fme583ss952s0",
          "number": 2,
          "receipt": {
            "data": 2,
            "result": "successful"
          },
          "type": "tx"
        },
        {
          "batch_number": 1,
          "body": {
            "data": "dHgzIGJvZHk="
          },
          "event_range": {
            "end": 8,
            "start": 6
          },
          "events": [
            {
              "key": "foo3",
              "module": {
                "name": "Bank"
              },
              "number": 6,
              "tx_hash": "ltx1ru7trr5fvftd044m3sg6dmr37qzuwh0qtcumatjajwaarckgk75sknzx0g",
              "type": "event",
              "value": {
                "token_created": {
                  "admins": [],
                  "coins": {
                    "amount": "0",
                    "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                  },
                  "mint_to_address": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "minter": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "supply_cap": "340282366920938463463374607431768211455",
                  "token_name": "token3"
                }
              }
            },
            {
              "key": "bar3",
              "module": {
                "name": "Bank"
              },
              "number": 7,
              "tx_hash": "ltx1ru7trr5fvftd044m3sg6dmr37qzuwh0qtcumatjajwaarckgk75sknzx0g",
              "type": "event",
              "value": {
                "token_frozen": {
                  "freezer": {
                    "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
                  },
                  "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
                }
              }
            }
          ],
          "hash": "ltx1ru7trr5fvftd044m3sg6dmr37qzuwh0qtcumatjajwaarckgk75sknzx0g",
          "number": 3,
          "receipt": {
            "data": 3,
            "result": "successful"
          },
          "type": "tx"
        }
      ],
      "type": "batch"
    }
  ],
  "finality_status": "finalized",
  "hash": "lblk1996593lp05aq0kxrsx4h0vvarckl9x4cxrl9edsdwh3k9lv0ty8sgfwcrh",
  "number": 0,
  "state_root": "lsr1wd6xzar994ex7mm595cqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqz3ltjy",
  "timestamp": 100000.0,
  "type": "slot"
}
