crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_latest_slot.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&slot"
---
{
  "batch_range": {
    "end": 4,
    "start": 2
  },
  "finality_status": "pending",
  "hash": "lblk1aa58w9vtdeedjuwv76tnywqdcxp3wfax9vxmhgvy63uqegjk464qrhrufe",
  "number": 1,
  "state_root": "lsr1wd6xzar994ex7mm595csqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq06s837",
  "timestamp": 200000.0,
  "type": "slot"
}
