crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_tx.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&tx"
---
{
  "batch_number": 3,
  "body": {
    "data": "dHg3IGJvZHk="
  },
  "event_range": {
    "end": 16,
    "start": 14
  },
  "hash": "ltx19qdemwssvkxgd5xrcfnms2ufw2mv0dqjshmqecs9ggg7d8wcnc2stl6u4q",
  "number": 7,
  "receipt": {
    "data": 0,
    "result": "skipped"
  },
  "type": "tx"
}
